--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 logo-font">
-                    Find your signature
+                    Find your <strong>signature</strong> 
                 </h1>
                 <div class="my-5">
                     <h4>
