--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,26 +10,25 @@ body {
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Inter', sans-serif;
-/*
-    /* animates zoom effect on loading page */
-    animation-name: hero-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: backwards;
-}
-
-/* creates the level of zoom for hero image 
-@keyframes hero-zoom {
-    from{
-        transform: scale(1);
-    }
-    to{
-        transform: scale(1.1);
-    }
-}
-*/
 
 h1, h2, h3, h4, h5 {
     font-family: 'Roboto Slab', serif;
+}
+
+/* The animation code */
+@keyframes example {
+    0%   {background-color: #475953;}
+    25%  {background-color: yellow;}
+    50%  {background-color: blue;}
+    100% {background-color: green;}
+  }
+
+.shop-now-button {
+    background: #475953;
+    color: white;
+    min-width: 260px;
+    animation-name: example;
+    animation-duration: 4s;
 }
 
 /* from Bulma */
@@ -50,11 +49,7 @@ h1, h2, h3, h4, h5 {
     width: fit-content;
 }
 
-.shop-now-button {
-    background: #475953;
-    color: white;
-    min-width: 260px;
-}
+
 
 .btn-color {
     background: #475953;
