--- a/static/css/base.css
+++ b/static/css/base.css
@@ -79,6 +79,20 @@ h1, h2, h3, h4, h5 {
     color: white;
 }
 
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
+
+.product-description-color {
+    background: #D9D9D9;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
