--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,13 +17,13 @@
                 Women
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="women-link">
-                <a href="" class="dropdown-item">Necklaces</a>
-                <a href="" class="dropdown-item">Rings</a>
-                <a href="" class="dropdown-item">Bracelets</a>
-                <a href="" class="dropdown-item">Watches</a>
-                <a href="" class="dropdown-item">Earrings</a>
-                <a href="" class="dropdown-item">Anklets</a>
-                <a href="" class="dropdown-item">Shop All</a>
+                <a href="{% url 'products' %}?category=women_necklaces" class="dropdown-item">Necklaces</a>
+                <a href="{% url 'products' %}?category=women_rings" class="dropdown-item">Rings</a>
+                <a href="{% url 'products' %}?category=women_bracelets" class="dropdown-item">Bracelets</a>
+                <a href="{% url 'products' %}?category=women_watches" class="dropdown-item">Watches</a>
+                <a href="{% url 'products' %}?category=women_earrings" class="dropdown-item">Earrings</a>
+                <a href="{% url 'products' %}?category=women_anklets" class="dropdown-item">Anklets</a>
+                <a href="{% url 'products' %}?category=women_necklaces,women_rings,women_bracelets,women_watches,women_earrings,women_anklets" class="dropdown-item">Shop All</a>
             </div>
         </li>
 
@@ -46,8 +46,8 @@
                 Collections
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="collections-link">
-                <a href="" class="dropdown-item">Personalised</a>
-                <a href="" class="dropdown-item">Signature</a>
+                <a href="{% url 'products' %}?category=personalised" class="dropdown-item">Personalised</a>
+                <a href="{% url 'products' %}?category=signature" class="dropdown-item">Signature</a>
             </div>
         </li>
 
@@ -56,10 +56,10 @@
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
+                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
+                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
     </ul>
