Updated allauth templates and tested profiles

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5 {
 
 .btn-color {
     background: #475953;
-    color: white;
+    color: #FFFFFF;
 }
 
 .shop-now-button {
@@ -77,6 +77,10 @@ h1, h2, h3, h4, h5 {
 .update-link,
 .remove-item {
     cursor: pointer;
+}
+
+input[name='q']::placeholder {
+    color: #aab7c4;
 }
 
 /* The animation code for shop now button */
@@ -178,6 +182,61 @@ h1, h2, h3, h4, h5 {
     overflow-x: hidden;
     overflow-y: auto;
 }
+
+/* Allauth form formatting */
+
+.allauth-form-inner-content p {
+    margin-top: 1.5rem; /* mt-4 */
+    color: #6c757d; /* text-secondary */
+}
+
+.allauth-form-inner-content input {
+    border-color: #555;
+    /* border-radius: 0; */
+}
+
+.allauth-form-inner-content label:not([for='id_remember']) {
+    display: none;
+}
+
+.allauth-form-inner-content input::placeholder {
+    color: #aab7c4;
+}
+
+.allauth-form-inner-content button,
+.allauth-form-inner-content input[type='submit'] {
+	/* btn */
+	display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: #475953;
+    border: 1px solid #475953;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 5px;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.allauth-form-inner-content button:hover,
+.allauth-form-inner-content input[type='submit']:hover {	
+	color: #fff;
+    background-color: #A68660;
+    border-color: #FFFFFF;
+}
+
+.allauth-form-inner-content a {
+	color: #17a2b8; /* text-info */
+}
+
 
 /* -------------------------------- Media Queries */
 
