--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -27,8 +27,8 @@
                     {% csrf_token %}
                     {{ form | crispy }}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+                        <a class="btn border-color rounded" href="{% url 'products' %}">Cancel</a>
+                        <button class="btn btn-color rounded" type="submit">Add Product</button>
                     </div>
                 </form>
             </div>            
