--- a/static/css/base.css
+++ b/static/css/base.css
@@ -291,7 +291,7 @@ input[name='q']::placeholder {
     }
 }
 
-/* pad the top a bit when navbar is collapsed on mobile 
+pad the top a bit when navbar is collapsed on mobile 
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
@@ -301,4 +301,51 @@ input[name='q']::placeholder {
         height: calc(100vh - 116px);
     }
 }
-*/
+
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
+
+    .display-4.logo-font.text-color {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-color.rounded,
+    .btn.border-color.rounded {
+        padding: .375rem .375rem;
+    }
+
+    .btn.border-color.rounded.btn-lg,
+    .btn.btn-color.rounded.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
+        padding: .25rem .5rem !important;
+    }
+}
