--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -113,7 +113,7 @@
             </div>
         </div>
     </div>
-    <div class="btt-button shadow-sm rounded-0 border btn-color border-color">
+    <div class="btt-button shadow-sm rounded-0 border border-color">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up mx-auto my-auto"></i>
         </a>	
