--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -8,7 +7,6 @@
         </div>
     </div>
 {% endblock %}
-
 {% block content %}
     <div class="overlay"></div>
     <div class="container-fluid">
@@ -31,11 +29,11 @@
                     <p class="mb-0">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
                     {% if product.category %}
-                        <p class="small mt-1 mb-0">
-                            <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                                <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                            </a>
-                        </p>
+                    <p class="small mt-1 mb-0">
+                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                        </a>
+                    </p>
                     {% endif %}
                     {% if product.rating %}
                         <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
@@ -43,34 +41,41 @@
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                     {% if request.user.is_superuser %}
-                                                    <small class="ml-3">
-                                                        <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                                                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                                                    </small>
-                                                {% endif %}
+                        <small class="ml-3">
+                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        </small>
+                    {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
                                 <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50 rounded border-color">
+                                <div class="form-group w-50">
                                     <div class="input-group">
+                                    <div class="input-group input-group-{{ product.id }}">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-color rounded-0" 
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                            <!-- <button class="decrement-qty btn btn-color rounded-0" 
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}"> -->
+                                            <button class="decrement-qty btn btn-color rounded-0 decrement-qty_{{ product.id }}" 
+                                                data-item_id="{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input" type="number"
+                                        <!-- <input class="form-control qty_input" type="number" -->
+                                        <input class="form-control qty_input id_qty_{{ product.id }}" type="number"
                                             name="quantity" value="1" min="1" max="99"
                                             data-item_id="{{ product.id }}"
                                             id="id_qty_{{ product.id }}">
+                                            <!-- data-item_id="{{ product.id }}"> -->
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-color rounded-0"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            <!-- <button class="increment-qty btn btn-color rounded-0"
+                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}"> -->
+                                            <button class="increment-qty btn btn-color rounded-0 increment-qty_{{ product.id }}"
+                                                data-item_id="{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-plus"></i>
                                                 </span>
@@ -79,8 +84,7 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col-12">
+                            <div class="col{% if s %}-12 mt-2{% endif %}">
                                 <a href="{% url 'products' %}" class="btn border-color rounded mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
@@ -90,6 +94,7 @@
                                 <input type="submit" class="btn btn-color rounded text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            
                         </div>
                     </form>
                 </div>
@@ -97,7 +102,6 @@
         </div>
     </div>
 {% endblock %}
-
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
