Create blog app structure and views

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -32,7 +32,7 @@
             </div>
         </li>
 
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-color mr-5" href="#" id="men-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Men
             </a>
@@ -44,10 +44,10 @@
                 <a href="" class="dropdown-item">Rings</a>
                 <a href="" class="dropdown-item">Shop All</a>
             </div>
-        </li>
+        </li> -->
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-color mr-5" href="#" id="men-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-color mr-5" href="#" id="collections" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Collections
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="collections-link">
@@ -66,6 +66,11 @@
                 <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
                 <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
+        </li>
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-color mr-5" href="{% url 'blog' %}">
+                Blog
+            </a>         
         </li>
     </ul>
 </div>
