--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -27,27 +27,6 @@
     </div>
 </div>
 
-<!-- <div class="masthead">
-    <div class="container">
-        <div class="row g-0">
-            <div class="col-md-6 masthead-text">
-                
-                <h1 class="post-title">{{ post.title }}</h1>
-                <p class="post-subtitle">Written By: {{ post.author }} | {{ post.created_on }}</p>
-            </div>
-            <div class="d-none d-md-block col-md-6 masthead-image">
-                
-                {% if "placeholder" in post.featured_image.url %}
-                    <img class="card-img-top"
-                        src="{{ MEDIA_URL }}placeholder.jpg">
-                    {% else %}
-                    <img class="card-img-top" src=" {{ post.featured_image.url }}">
-                    {% endif %}
-            </div>
-        </div>
-    </div>
-</div> -->
-
 <div class="container">
     <div class="col-md-6">
         <!-- Post title goes in these h1 tags -->
@@ -66,8 +45,22 @@
                 <div class="row">
 
                     <div class="col-1">
+                        <strong>
+                            {% if user.is_authenticated %}
+                            <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
+                                {% csrf_token %}
+                                {% if liked %}
+                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i class="fas fa-heart"></i></button>
+                                {% else %}
+                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i class="far fa-heart"></i></button>
+                                {% endif %}
+                            </form>
+                            {% else %}
+                            <span class="text-secondary"><i class="far fa-heart"></i></span>
+                            {% endif %}
                         <!-- The number of likes goes before the closing strong tag -->
-                        <strong class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }} </strong>
+                        <span class="text-secondary">{{ post.number_of_likes }} </span>
+                        </strong>
                     </div>
                     <div class="col-1">
                         {% with comments.count as total_comments %}
@@ -100,12 +93,12 @@
                 <h3>Leave a comment: <i class="fas fa-comments ps-1 blueicon"></i></h3>
                 <p>Posting as: {{ user.username }}</p>
                 <form method="post" style="margin-top: 1.3em;">
-                    {{ comment_form | crispy }}
+                    {{ comment_form | crispy | safe }}
                     {% csrf_token %}
                     <button type="submit" class="btn btn-color btn-lg">Submit For Approval</button>
                 </form>
                 {% else %}
-                <h3>Please <a href="{% url 'account_login' %}">login</a> or <a href="{% url 'account_signup' %}">register</a> to leave a comment.</h3>
+                <h3>Please <a href="{% url 'account_login' %}">login</a> or <a href="{% url 'account_signup' %}">register</a> to like or leave a comment.</h3>
                 {% endif %}
                 {% endif %}
             </div>
@@ -128,7 +121,7 @@
                         </span> wrote:
                     </p>
                     <!-- The body of the comment goes before the | -->
-                    {{ comment.body | linebreaks }}
+                    {{ comment.body | safe | linebreaks }}
                 </div>
                 <!-- Our for loop ends here -->
                 {% endfor %}
