Create reviews app. Enable authenticated users to add and edit reviews.

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -101,7 +101,10 @@
             </div>
         </div>
     </div>
+<!-- Includes -->
+{% include 'reviews/includes/reviews.html' %}
 {% endblock %}
+
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
