--- a/templates/base.html
+++ b/templates/base.html
@@ -39,10 +39,10 @@
   <body>
     <header class="container-fluid fixed-top">
       
-      <div id="delivery-banner" class="row text-center">
+      <!-- <div id="delivery-banner" class="row text-center">
         <div class="col btn-color">
             <h4 class="logo-font my-1">Free delivery above ${{ free_delivery_threshold }}!</h4>                
-      </div> 
+      </div>  -->
                    
       </div>
       <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
