--- a/templates/base.html
+++ b/templates/base.html
@@ -226,7 +226,7 @@
               <!-- Contact Us Section -->
               <h6 class="text-uppercase"><strong>Contact Us</strong></h6>
               <div>
-                <a href="" class="footer-links">Get in Touch</a>
+                <a href="{% url 'contact' %}" class="footer-links">Get in Touch</a>
               </div>
             </div>
             <h6 class="text-uppercase">Follow Us</h6>
