Add product images

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -46,7 +46,7 @@
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top"
-                                    src="{{ MEDIA_URL }}placeholder.jpg" width="100%">
+                                    src="{{ MEDIA_URL }}blog_image.jpeg" width="100%">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}" width="100%">
                                 {% endif %}
