--- a/company_info/templates/contact_us/contact_us.html
+++ b/company_info/templates/contact_us/contact_us.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-<!-- {% block extra_title %} - Contact Us{% endblock %} -->
+{% block extra_title %} - Contact Us{% endblock %}
 
 {% block page_header %}
 <div class="container header-container">
@@ -10,52 +10,59 @@
 </div>
 {% endblock %}
 
+
 {% block content %}
-<div class="overlay"></div>
-<div class="container">
-    <div class="row">
-        <div class="col">
-        </div>
-    </div>
-</div>
 
 <div class="overlay"></div>
 <div class="container">
     <div class="row">
         <div class="col text-center mt-3">
-            <h2 class="logo-font">Blog</h2>
+            <h2 class="logo-font">Contact Us</h2>
             <hr class="w-50 mb-1">
         </div>
     </div>
 </div>
 
-    <div class="row">
-        <div class="col-md-10 contact-form">
+<div class="container">
+    <div class="row pb-5">
+        <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5 form-bg">
             <form method="POST">
                 <!-- Contact Form -->
                 {% csrf_token %}
-                    <h3 class="welcome"> Contact Us!</h3>
-                    <div class="form-section autofill" id="contact-us">
-                        <form method="post" action="https://formspree.io/f/mzbqzzqd" class="signup-form">
-                            <label for="fname">First Name</label>
-                            <input id="fname" name="first_name" type="text" required placeholder="Your name..">
-        
-                            <label for="lname">Last Name</label>
-                            <input id="lname" name="last_name" type="text" required placeholder="Your name..">
-        
-                            <label for="email">Email Address</label>
-                            <input type="email" id="email" name="email_address" required placeholder="Your email address..">
-                            <br>
-                            <label for="subject">Subject</label>
-                            <textarea id="subject" name="subject" placeholder="Your message.."
-                                style="height:200px"></textarea>
-        
-                            <button type="submit">Submit</button>
-                        </form>
-                    </div>
+                <div class="form-group">
+                    <label for="nameInput">First Name*</label>
+                    <input id="nameInput" type="text" name="first_name" class="form-control form-input"
+                        Placeholder="First Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="nameInput">Last Name*</label>
+                    <input id="nameInput" type="text" name="last_name" class="form-control form-input"
+                        Placeholder="Last Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlEmail">Email address*</label>
+                    <input type="email_address" name="email_address" class="form-control" id="exampleFormControlEmail"
+                        placeholder="name@example.com">
+                </div>
+                <div class="form-group">
+                    <label for="subjectInput">Subject</label>
+                    <input id="subjectInput" type="text" name="subject" class="form-control form-input"
+                        Placeholder="Subject">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Message*</label>
+                    <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="6"
+                        placeholder="How can we help?"></textarea>
+                </div>
+                <div class="submit-button text-center mb-2">
+                    <button type="submit" id="submit-button" class="btn btn-color font-weight-bold text-uppercase">
+                        Send Message
+                    </button>
+                </div>
             </form>
         </div>
     </div>
 </div>
+</div>
 
-{% endblock %}
+{% endblock content %}
