--- a/templates/base.html
+++ b/templates/base.html
@@ -158,7 +158,7 @@
   {% endblock %}
 
   <!-- Footer -->
-  <footer class="footer">
+  <footer class="footer bg-light">
     <div class="footer-div">
       <div class="container">
         <div class="row">
