--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -18,35 +18,20 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-color mr-5" href="#" id="women-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Women
+            <a class="logo-font font-weight-bold nav-link text-color mr-5" href="#" id="jewellery" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Jewellery
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="women-link">
+            <div class="dropdown-menu border-0" aria-labelledby="jewellery">
                 <a href="{% url 'products' %}?category=women_necklaces" class="dropdown-item">Necklaces</a>
                 <a href="{% url 'products' %}?category=women_rings" class="dropdown-item">Rings</a>
                 <a href="{% url 'products' %}?category=women_bracelets" class="dropdown-item">Bracelets</a>
                 <a href="{% url 'products' %}?category=women_watches" class="dropdown-item">Watches</a>
                 <a href="{% url 'products' %}?category=women_earrings" class="dropdown-item">Earrings</a>
-                <a href="{% url 'products' %}?category=women_anklets" class="dropdown-item">Anklets</a>
-                <a href="{% url 'products' %}?category=women_necklaces,women_rings,women_bracelets,women_watches,women_earrings,women_anklets" class="dropdown-item">Shop All</a>
+                <a href="{% url 'products' %}?category=women_necklaces,women_rings,women_bracelets,women_watches,women_earrings" class="dropdown-item">Shop All</a>
             </div>
         </li>
 
         <!-- <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-color mr-5" href="#" id="men-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Men
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="men-link">
-                <a href="" class="dropdown-item">Necklaces</a>
-                <a href="" class="dropdown-item">Rings</a>
-                <a href="" class="dropdown-item">Bracelets</a>
-                <a href="" class="dropdown-item">Watches</a>
-                <a href="" class="dropdown-item">Rings</a>
-                <a href="" class="dropdown-item">Shop All</a>
-            </div>
-        </li> -->
-
-        <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-color mr-5" href="#" id="collections" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Collections
             </a>
@@ -54,9 +39,9 @@
                 <a href="{% url 'products' %}?category=personalised" class="dropdown-item">Personalised</a>
                 <a href="{% url 'products' %}?category=signature" class="dropdown-item">Signature</a>
             </div>
-        </li>
+        </li> -->
 
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-color" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Special Offers
             </a>
@@ -66,7 +51,7 @@
                 <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
                 <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
-        </li>
+        </li> -->
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-color mr-5" href="{% url 'blog' %}">
                 Blog
