Add blog post content

--- a/reviews/templates/reviews/includes/reviews.html
+++ b/reviews/templates/reviews/includes/reviews.html
@@ -67,7 +67,7 @@
             {% else %}
             <!-- Text to display if there are no reviews -->
             <div class="column">
-                <h5 class="title-heading-small">There are no reviews for {{ product.name }} yet. Why don't you add one?</h5>
+                <h5 class="title-heading-small ml-5">There are no reviews for {{ product.name }} yet. Why don't you add one?</h5>
             </div>
         </div>
     </div>
