--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -23,8 +23,8 @@
     <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5 form-bg">
       <form method="POST" action="{% url 'add_review' product.id %}" class="form"
             enctype="multipart/form-data">
+        {{ form | crispy | safe }}
         {% csrf_token %}
-        {{ form | crispy }}
         <div class="text-center">
           <button class="btn btn-color mt-3 mr-3" type="submit">Add Review
           </button>
