--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -22,8 +22,8 @@
     <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5 form-bg">
       <form method="POST" action="{% url 'edit_review' review.id %}" class="form mb-2"
             enctype="multipart/form-data">
+        {{ form | crispy | safe }}
         {% csrf_token %}
-        {{ form | crispy }}
         <!--buttons to update or cancel the process-->
         <div class="text-center">
           <button class="btn btn-color rounded mt-3 mr-3" type="submit">Update
